<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="css.cis3334.intentsperformances.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewTitle"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/event1" />

        <TextView
            android:id="@+id/textViewDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewDescription1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/web_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1WebInfo"
            android:layout_weight="1" />

        <Button
            android:text="@string/add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1Calendar"
            android:layout_weight="1" />

        <Button
            android:text="@string/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1map"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/event2" />

        <TextView
            android:id="@+id/textViewDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewDescription2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button2WebInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/web_info" />

        <Button
            android:id="@+id/button2Calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_calendar" />

        <Button
            android:id="@+id/button2map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/event3" />

        <TextView
            android:id="@+id/textViewDescription3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewDescription3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3WebInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/web_info" />

        <Button
            android:id="@+id/button3Calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_calendar" />

        <Button
            android:id="@+id/button3map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>






